// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic 1`] = `
[
  {
    "en": {
      "hello": "Hello!",
    },
    "ja": {
      "hello": "こんにちは！",
    },
  },
]
`;

exports[`Multiple blocks 1`] = `
[
  {
    "en": {
      "hello": "Hello!",
    },
    "ja": {
      "hello": "こんにちは！",
    },
  },
  {
    "foo": "foo",
  },
]
`;
